# ic-dev-kit-rs

./: .gitignore  Cargo.toml  README.md  STORAGE_EXAMPLES.md
examples/: example_canister.rs
examples/simple_counter/: .env  Cargo.toml  README.md  dfx.json
examples/simple_counter/src/example_canister/: Cargo.toml
examples/simple_counter/src/example_canister/src/: lib.rs
src/: auth.rs  candle.rs  http.rs  intercanister.rs  large_objects.rs  lib.rs  model_server.rs  storage.rs  telemetry.rs  text_generation.rs
