[package]
name = "ic-dev-kit-rs"
version = "0.1.0"
edition = "2021"
description = "Rust toolkit for IC development - standardizes HTTP generation, large object storage, Canister Geek integration, and common canister patterns"
authors = ["Jesse Glass <dr.jesse.glass@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drjesseglass/ic-dev-kit-rs"
keywords = ["internet-computer", "ic", "dfinity", "canister", "blockchain"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# IC dependencies
ic-cdk = "0.18.7"
candid = "0.10.20"
canistergeek_ic_rust = "0.4.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async support
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt"] }

[lib]
crate-type = ["cdylib", "rlib"]
