[package]
name = "ic-dev-kit-rs"
version = "0.1.0"
edition = "2021"
description = "Rust toolkit for IC development - standardizes HTTP generation, large object storage, Canister Geek integration, and common canister patterns"
authors = ["Jesse Glass <dr.jesse.glass@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/drjesseglass/ic-dev-kit-rs"
keywords = ["internet-computer", "ic", "dfinity", "canister", "blockchain"]
categories = ["web-programming", "api-bindings"]

[dependencies]
# IC dependencies (keep working versions)
ic-cdk = "0.18.7"
candid = "0.10.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async support
async-trait = "0.1"

# Telemetry
# doesn't support 0.4.4 ic-cdk v19 yet which has different inter canister calls
canistergeek_ic_rust = { version = "0.4.4", optional = true }
#canistergeek_ic_rust = { git = "https://github.com/DrJesseGlass/canistergeek_ic_rust", branch = "update/ic-cdk/19",  optional = true}

# Storage - optional, behind feature flag
ic-stable-structures = { version = "0.7.2", optional = true }

# Candle - optional, behind feature flag
candle-core = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false, optional = true }
candle-nn = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false, optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.1", default-features = false, optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "macros", "rt"] }

[features]
default = []
storage = ["ic-stable-structures"]
candle = ["storage", "candle-core", "candle-nn"]
text-generation = ["candle", "candle-transformers", "tokenizers"]
telemetry = ["canistergeek_ic_rust"]

[lib]
crate-type = ["cdylib", "rlib"]